# NovaApplicationTemplate

./: .gitmodules  CMakeLists.txt  README.md
src/: MyApp.cpp
